--- a/component/heroCard/heroCard.css
+++ b/component/heroCard/heroCard.css
@@ -1,4 +1,9 @@
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 .card {
   position: relative;
   display: inline-block;
