--- a/component/heroCard/heroCard.css
+++ b/component/heroCard/heroCard.css
@@ -1,8 +1,10 @@
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 html,
 body {
-  margin: 0;
   padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 .card {
   position: relative;
